# decision-jungles

./: .flake8  .gitignore  CITATION.cff  CITATION.md  CONTRIBUTING.md  LICENSE  README.md  _config.yml  check_implementation.py  pyproject.toml  requirements.txt  setup.py  setup_cython.py
.github/workflows/: python-lint.yml  python-tests.yml
conda-recipe/: meta.yaml
decision_jungles/: __init__.py  _version.py  dag.py  jungle.py  node.py  regression.py  regression_dag.py  regression_node.py
decision_jungles/training/: __init__.py  clustersearch.py  cyth_lsearch.pyx  lsearch.py  objective.py  optimized_lsearch.py  reg_objective.py
decision_jungles/utils/: __init__.py  benchmarking.py  error_handling.py  logging.py  memory_profiling.py  metrics.py  visualization.py
docs/: API_REFERENCE.md  ENHANCEMENTS.md  IMPLEMENTATION.md  README_REGRESSION.md  index.md  regression.md
examples/: _decision_jungle_tutorial.ipynb  basic_usage.py  benchmarking_example.py  categorical_features.py  comparison_with_forests.py  dag_visualization.py  early_stopping.py  hyperparameter_tuning.py  memory_profiling_example.py  model_serialization.py  optimization_comparison.py  patched_dag_visualization.py  pipeline_integration.py  profiling.py  regression_example.py
scripts/: build_conda.sh  build_package.sh  initialize_git.sh  lint.sh
tests/: __init__.py  test_dag.py  test_edge_cases.py  test_feature_importance.py  test_jungle.py  test_node.py  test_objective.py  test_property_based.py  test_regression.py  test_serialization.py
